# ImageCraft

./: CMakeLists.txt  DialogBox.qml  EditorView.qml  ICContent.qml  ICFooter.qml  ImageCraft.qml  ImageCraft.qmlproject  LCenter.qml  Layer.qml  Menu_File.qml  Menu_Graphics.qml  Menu_Layer.qml  Menu_Setting.qml  Menu_Swatches.qml  MyMenu.qml  MyMenu.qmlproject  RCenter.qml  README.md  SelectBox.qml  StrawImage.qml  Tags.qml  activectrl.cpp  activectrl.h  editor.cpp  editor.h  main.cpp  operation.cpp  operation.h  res.qrc  toolctrl.cpp  toolctrl.h
ImageCraft/: CMakeLists.txt  EditorView.qml  SelectBox.qml  imageprovider.cpp  imageprovider.h  main.cpp  res.qrc  toolctrl.cpp  toolctrl.h
ImageCraft/modules/se/qt/menu/: Menu_File.qml
ImageCraft/modules/se/qt/toolBar/: Straw_toolBar.qml  Word_toolBar.qml
Pack_MarkdownAndVideos/: ImageCraft_DocumentDescription.docx
Pack_MarkdownAndVideos/app/: ImageCraft  ld-linux-x86-64.so.2  libEGL.so.1  libGLX.so.0  libGLdispatch.so.0  libIex-3_2.so.31  libIlmThread-3_2.so.31  libImath-3_1.so.29  libOpenEXR-3_2.so.31  libOpenEXRCore-3_2.so.31  libOpenGL.so.0  libQt6OpenGLWidgets.so.6  libQt6QmlModels.so.6  libQt6Test.so.6  libX11.so.6  libblas.so.3  libcap.so.2  libcblas.so.3  libcom_err.so.2  libdeflate.so.0  libdl.so.2  libexpat.so.1  libfontconfig.so.1  libgcc_s.so.1  libglib-2.0.so.0  libgssapi_krb5.so.2  libgthread-2.0.so.0  libharfbuzz.so.0  libjpeg.so.8  libk5crypto.so.3  libkeyutils.so.1  libkrb5.so.3  libkrb5support.so.0  liblzma.so.5  libopencv_highgui.so.409  libopencv_imgcodecs.so.409  libopencv_photo.so.409  libopencv_xphoto.so.409  libopenjp2.so.7  libpng16.so.16  (+10 more)
modules/se/qt/menu/: Menu_Edit.qml  Menu_File.qml  Menu_Filter.qml  Menu_Graphics.qml  Menu_Help.qml  Menu_Layer.qml  Menu_Setting.qml  Menu_View.qml  MyMenu.qml  MyMenuItem.qml
modules/se/qt/toolBar/: Boxselect_toolBar.qml  Brush_toolBar.qml  Choice_toolBar.qml  Cutout_toolBar.qml  Eraser_toolBar.qml  Frame_toolBar.qml  Grip_toolBar.qml  Lasso_toolBar.qml  Line_toolBar.qml  MoveToolBar.qml  Move_toolBar.qml  MyToolBar.qml  Rectangle_toolBar.qml  Straw_toolBar.qml  Word_toolBar.qml  Zoom_toolBar.qml  qmldir
